# aws-merkle-tree

./: .gitignore  Cargo.toml  README.md
.github/workflows/: deploy.yml  merkle.yml
cdk-deploy/: package-lock.json  package.json
cdk-deploy/lib/: cdk-deploy-stack.ts
merkle/: Cargo.toml  build.sh
merkle/src/: db.rs  handler.rs  lib.rs  main.rs  merkle.rs
merkle/tests/: tests.rs
src/: main.rs  merkle.rs
