[package]
name = "aws-merkle-tree"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config =  "0.101.0"
aws-types = "0.101.0"
aws-sdk-dynamodb = "0.38.0"
hex = "0.4.3"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = { version = "1" }
sha3 = "0.10.8"
tokio = { version = "1", features = ["full"] }