[package]
name = "aws-merkle-tree"
version = "0.1.0"
edition = "2021"
authors = [ "Léa Na" ]

[[bin]]
name = "merkle"
path = "src/main.rs"

[dependencies]
aws-config = "0.101.0"
aws-types = "1.0.0"
aws-sdk-dynamodb = "0.38.0"
hex = "0.4.3"
lambda_http = "0.8.3"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.108"
sha3 = "0.10.8"
url = "2.2.2"
tokio = { version = "1.34.0", features = ["full"] }